# seecube_sdk_python_wrapper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  jetson_instructions.md  otto.sh  setup.ps1  setup.sh  test_api.py  windows_install.md  wrapper.py
.template_files/modules/: CMakeLists.txt  TestCMakeLists.txt  module_name.c  module_name.h  test_module_name.cpp
inc/: SeeCube_SDK_user.h
src/: CMakeLists.txt  conftest.py  example.py  main.c  main.cpp  test_example.py
src/fake_SeeCube/: CMakeLists.txt  fake_SeeCube.c  fake_SeeCube.cpp  fake_SeeCube.h
src/linux_arm/E6D25080001_N1225140005_E3x25110003/: release.txt
src/linux_x86/E6D25080001_N1225140005_E3x25110003/: release.txt
src/tests/: conftest.py  test_example.py
src/windows/: opencv_world4100.lib
src/windows/E6D25080001_N1225140005_E3x25110003/: SeeCube.lib  release.txt
src/windows/E6D25230002/: SeeCubed.lib  release.txt
tests/: AllTests.cpp  CMakeLists.txt
tests/fake_SeeCube/: CMakeLists.txt  test_fake_SeeCube.cpp
tests/simple_test/: CMakeLists.txt  simple_test.cpp
